--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
     <div class="err-message btn btn-outline-danger" aria-disabled="true">Session
       Timeout</div>
   {{else if createdUser}}
-    <div class="message btn btn-outline-danger" aria-disabled="true">Created
+    <div class="message btn btn-outline-success" aria-disabled="true">Created
       user</div>
   {{/if}}
   <form action="/database/sign_in" method="post">
